fixed flex styles in the pane panel to prevent content jumps

--- a/src/app/Elements/_Details/Pane/_Pane.less
+++ b/src/app/Elements/_Details/Pane/_Pane.less
@@ -1,8 +1,3 @@
-.Pane {
-   display: flex;
-   flex-direction: column;
-}
-
 .Pane_expanded {
    height: 100%;
 }
